kustomize/bases/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
  # These are not needed by considered a good practice
  labels:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: linkding
    app.kubernetes.io/instance: linkding
    app.kubernetes.io/version: "1.35.0"
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: linkding
