kustomize/bases/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  # These are not needed by considered a good practice
  labels:
    app.kubernetes.io/name: linkding
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: linkding
    app.kubernetes.io/instance: linkding
    app.kubernetes.io/version: "1.35.0"
  annotations:
    # Use only 80 and 443 entrypoint
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  rules:
    - host: linkding.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 9090
